--- a/android/app/src/main/res/xml/music_widget_provider.xml
+++ b/android/app/src/main/res/xml/music_widget_provider.xml
@@ -2,12 +2,11 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="250dp"
     android:minHeight="110dp"
-    android:targetCellWidth="4"
-    android:targetCellHeight="2"
     android:updatePeriodMillis="0"
-    android:initialLayout="@layout/music_widget_layout"
+    android:initialLayout="@layout/music_widget"
+    android:previewImage="@drawable/default_album_art"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen"
-    android:previewImage="@mipmap/ic_launcher"
-    android:description="@string/app_name">
+    android:initialKeyguardLayout="@layout/music_widget"
+    android:widgetFeatures="reconfigurable">
 </appwidget-provider>
