--- a/android/app/src/main/res/layout/music_widget.xml
+++ b/android/app/src/main/res/layout/music_widget.xml
@@ -1,98 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/widget_root"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
-    android:padding="8dp"
-    android:background="@drawable/widget_background_orange_gradient">
+    android:layout_height="match_parent">
 
+    <!-- This ImageView will hold the dynamic background. -->
+    <ImageView
+        android:id="@+id/widget_background_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/widget_background"
+        android:contentDescription="Widget Background" />
+
+    <!-- Container for all content with padding -->
+    <RelativeLayout
+        android:id="@+id/widget_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+         android:padding="4dp"> <!-- Padding removed -->
+    <!-- Album Art -->
     <ImageView
         android:id="@+id/album_art"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_marginStart="4dp"
         android:scaleType="centerCrop"
         android:src="@drawable/default_album_art"
-        android:background="@drawable/rounded_corners"
-        android:clipToOutline="true"
-        tools:ignore="ContentDescription" />
+        android:contentDescription="@string/album_art_description"
+        android:background="@drawable/album_art_corner_radius"
+        android:clipToOutline="true" />
 
-    <LinearLayout
-        android:id="@+id/text_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/album_art"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp">
-
-        <TextView
-            android:id="@+id/song_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:text="Song Title" />
-
-        <TextView
-            android:id="@+id/artist_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#CCCCCC"
-            android:textSize="14sp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:text="Artist Name" />
-    </LinearLayout>
-
+    <!-- Controls on the right -->
     <LinearLayout
         android:id="@+id/controls_container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@id/album_art"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="4dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/prev_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/circular_button_background_orange"
-            android:src="@drawable/ic_skip_previous_white_24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/black_circle_background"
             android:contentDescription="Previous"
-            android:scaleType="centerInside"
-            android:padding="8dp" />
+            android:scaleType="center"
+            android:src="@drawable/ic_skip_previous_white_24dp" />
 
         <ImageButton
             android:id="@+id/play_pause_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/circular_button_background_orange_dark"
-            android:src="@drawable/ic_pause_white_24dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/black_circle_background"
             android:contentDescription="Play/Pause"
-            android:scaleType="centerInside"
-            android:padding="8dp" />
+            android:scaleType="center"
+            android:src="@drawable/ic_play_arrow_white_24dp" />
 
         <ImageButton
             android:id="@+id/next_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/circular_button_background_orange"
-            android:src="@drawable/ic_skip_next_white_24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/black_circle_background"
             android:contentDescription="Next"
-            android:scaleType="centerInside"
-            android:padding="8dp" />
+            android:scaleType="center"
+            android:src="@drawable/ic_skip_next_white_24dp" />
     </LinearLayout>
 
+    <!-- Text container for Title and Artist -->
+    <LinearLayout
+        android:id="@+id/text_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/album_art"
+        android:layout_toStartOf="@id/controls_container"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/song_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textStyle="bold"
+            tools:text="This is a Very Long Song Title" />
+
+        <TextView
+            android:id="@+id/artist_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="?android:attr/textColorSecondary"
+            tools:text="Artist Name" />
+    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
