--- a/android/app/src/main/res/xml/music_widget_provider.xml
+++ b/android/app/src/main/res/xml/music_widget_provider.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="250dp"
-    android:minHeight="110dp"
-    android:updatePeriodMillis="0"
+    android:minHeight="60dp"
+    android:updatePeriodMillis="86400000"
+    android:previewImage="@mipmap/ic_launcher"
     android:initialLayout="@layout/music_widget"
-    android:previewImage="@drawable/default_album_art"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="horizontal"
     android:widgetCategory="home_screen"
-    android:initialKeyguardLayout="@layout/music_widget"
-    android:widgetFeatures="reconfigurable">
+    android:description="@string/widget_description">
 </appwidget-provider>
